attempt to fix white space issue using overflow hidden and removed normalize css and added margin 0

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ section {
   height: 100vh;
   width: 100%;
   overflow: hidden;
+  overflow-x: hidden; 
 /*  -webkit-filter: blur(0.000001px);*/
 /*  -webkit-font-smoothing: antialiased !important;*/
 /*  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);*/
@@ -116,8 +117,10 @@ section.grey {
 padding-top: 8.5%;
 bottom: 0;
 right:0;
+margin: 0;
 border: 1px solid transparent;
 overflow: hidden;
+overflow-x: hidden; 
 }
 
 .section.contact p {
